remove Rmd and extraneous stuff

--- a/content/figures_and_tables.qmd
+++ b/content/figures_and_tables.qmd
@@ -1,18 +1,16 @@
 ---
-title: "R Markdown"
+title: "Figures and Tables"
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-You can include R Markdown files in your project.
+Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
-## R Markdown
+## Code
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+You can embed an R code chunk like this:
 
 ```{r cars}
 summary(cars)
