--- a/index.qmd
+++ b/index.qmd
@@ -5,5 +5,4 @@ format:
     toc: false
 ---
 
-This repository contains example code and documentation for the National Stock Assessment Seminar presentation "Operationalizing available research computing resources for stock assessment". 
-
+This repository contains examples and documentation for accessing and applying existing research computing resources available to NOAA Fisheries staff. Example code and documentation were presented as a part of the National Stock Assessment Seminar series ([slides](https://moshima-pifsc.github.io/NSASS-HTC-HPC-Computing/assets/web-slides.html)).
